[package]
name = "plant-tower-rs"
version = "0.1.0"
authors = ["andretrump <mail@atrump.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "plant-tower-rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-hal = "0.46.2"
toml-cfg = "0.2.0"
embedded-svc = "0.29.0"
anyhow = "1.0.103"
json = "0.12.4"
strum_macros = "0.28.0"

[build-dependencies]
embuild = "0.33"
toml-cfg = "0.2.0"
